# Proves_AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-ml.txt
scripts/: check_hf.py  check_neon.py  download_graph.py  find_shortest_path.py  init_pgvector.sql  pytorch_knowledge_graph_example.py  upload_graphjson_to_sqlitedb.py
src/proves_ai/: config.py
src/proves_ai/db/: __init__.py  neon.py
src/proves_ai/hf/: __init__.py  client.py
src/proves_ai/models/: __init__.py  graphsage.py  reranker.py  xgboost_baseline.py
src/proves_ai/retrieval/: __init__.py  pgvector.py
